k8s/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: shuka-headless
spec:
  clusterIP: None
  selector:
    app: shuka-headless
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuka-headless
  labels:
    app: shuka-headless
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shuka-headless
  template:
    metadata:
      labels:
        app: shuka-headless
    spec:
      hostname: shuka-headless
      containers:
      - name: shuka-headless
        image: docker.io/daohiep22/shuka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
