k8s/probe.yaml
apiVersion: v1
kind: Service
metadata:
  name: shuka
spec:
  selector:
    app: shuka
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuka
  labels:
    app: shuka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shuka
  template:
    metadata:
      labels:
        app: shuka
    spec:
      hostname: shuka
      containers:
      - name: shuka
        image: docker.io/bonavadeur/shuka:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /probe/failed
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
---
