k8s/shuka-private.yaml
apiVersion: v1
kind: Service
metadata:
  name: shuka-private
spec:
  selector:
    app: shuka-private
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuka-private
  labels:
    app: shuka-private
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shuka-private
  template:
    metadata:
      labels:
        app: shuka-private
    spec:
      hostname: shuka-private
      containers:
      - name: shuka-private
        image: docker.io/bonavadeur/shuka-private:latest
        # command: ["/bin/sh", "startup.sh", "hello"]
        # command: ["/bin/sh"]
        # args: ["startup.sh", "hello"]
        # imagePullPolicy: IfNotPresent
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/hostname: node1
      imagePullSecrets:
      - name: shuka-private
---
