k8s/shuka-yon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuka-1
  labels:
    app: shuka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shuka-1
  template:
    metadata:
      labels:
        app: shuka-1
    spec:
      hostname: shuka-1
      containers:
      - name: shuka-1
        image: docker.io/daohiep22/shuka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/hostname: node1
---
apiVersion: v1
kind: Service
metadata:
  name: shuka-1
spec:
  selector:
    app: shuka-1
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuka-2
  labels:
    app: shuka-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shuka-2
  template:
    metadata:
      labels:
        app: shuka-2
    spec:
      hostname: shuka-2
      containers:
      - name: shuka-2
        image: docker.io/daohiep22/shuka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/hostname: node3
---
apiVersion: v1
kind: Service
metadata:
  name: shuka-2
spec:
  selector:
    app: shuka-2
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuka-3
  labels:
    app: shuka-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shuka-3
  template:
    metadata:
      labels:
        app: shuka-3
    spec:
      hostname: shuka-3
      containers:
      - name: shuka-3
        image: docker.io/daohiep22/shuka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/hostname: node1
---
apiVersion: v1
kind: Service
metadata:
  name: shuka-3
spec:
  selector:
    app: shuka-3
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuka-4
  labels:
    app: shuka-4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shuka-4
  template:
    metadata:
      labels:
        app: shuka-4
    spec:
      hostname: shuka-4
      containers:
      - name: shuka-4
        image: docker.io/daohiep22/shuka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/hostname: node3
---
apiVersion: v1
kind: Service
metadata:
  name: shuka-4
spec:
  selector:
    app: shuka-4
  ports:
  - port: 80
    targetPort: 80
