k8s/shuka-san-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: shuka-1
spec:
  selector:
    app: shuka-1
  ports:
  - port: 80
    targetPort: 80
  internalTrafficPolicy: Local
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: shuka-1
  labels:
    app: shuka-1
spec:
  selector:
    matchLabels:
      app: shuka-1
  template:
    metadata:
      labels:
        app: shuka-1
    spec:
      hostname: shuka-1
      containers:
      - name: shuka-1
        image: docker.io/daohiep22/shuka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---





apiVersion: v1
kind: Service
metadata:
  name: shuka-2
spec:
  selector:
    app: shuka-2
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuka-2-cloud
  labels:
    app: shuka-2-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shuka-2
      region: cloud
  template:
    metadata:
      labels:
        app: shuka-2
        region: cloud
    spec:
      hostname: shuka-2-cloud
      containers:
      - name: shuka-2-cloud
        image: docker.io/daohiep22/shuka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/hostname: node1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuka-2-edge
  labels:
    app: shuka-2-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shuka-2
      region: edge
  template:
    metadata:
      labels:
        app: shuka-2
        region: edge
    spec:
      hostname: shuka-2-edge
      containers:
      - name: shuka-2-edge
        image: docker.io/daohiep22/shuka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/hostname: node3
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: shuka-2
spec:
  host: shuka-2.default.svc.cluster.local
  subsets:
  - name: cloud
    labels:
      app: shuka-2
      region: cloud
  - name: edge
    labels:
      app: shuka-2
      region: edge
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shuka-2
spec:
  hosts:
  - shuka-2.default.svc.cluster.local
  http:
  - match:
    - headers:
        tag:
          exact: cloud
    route:
    - destination:
        host: shuka-2.default.svc.cluster.local
        subset: cloud
  - match:
    - headers:
        tag:
          exact: edge
    route:
    - destination:
        host: shuka-2.default.svc.cluster.local
        subset: edge
---





apiVersion: v1
kind: Service
metadata:
  name: shuka-3
spec:
  selector:
    app: shuka-3
  ports:
  - port: 80
    targetPort: 80
  internalTrafficPolicy: Local
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuka-3
  labels:
    app: shuka-3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shuka-3
  template:
    metadata:
      labels:
        app: shuka-3
    spec:
      hostname: shuka-3
      containers:
      - name: shuka-3
        image: docker.io/daohiep22/shuka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - node1
                - node3
---
